# ads

./: Cargo.toml
src/: main.rs
src/direct/db/: get_client_list.rs  get_statistics.rs  mod.rs
src/direct/models/: client_list.rs  mod.rs
src/server/: server.rs
src/server/handler/: get_stat_client.rs  mod.rs  start_parse_client_list.rs
src/utils/: create_table.rs
